use variable insted fixed number in spacing

--- a/packages/block-editor/src/components/link-control/style.scss
+++ b/packages/block-editor/src/components/link-control/style.scss
@@ -36,7 +36,7 @@ $block-editor-link-control-number-of-actions: 1;
 		}
 
 		.block-editor-link-control__search-item-top {
-			gap: 8px;
+			gap: $grid-unit-10;
 
 			.components-button.has-icon {
 				min-width: inherit;
